# dci-module-ppn-transport-inproc

./: CMakeLists.txt
idl/ppn/transport/: inproc.idl
src/: acceptor.cpp  acceptor.hpp  channelBridge.cpp  channelBridge.hpp  connector.cpp  connector.hpp  entry.cpp  pch.hpp
src/channelBridge/: pumper.cpp  pumper.hpp  side.cpp  side.hpp
